# claudez

./: .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  DEEPSEEK_TECH_STACK.md  README.md  TECHNICAL_WHITEPAPER.md  UX_AUDIT.md  _test_ws.py  config.json  main.py  pyproject.toml  requirements.txt  run_web.py  settings.gradle  start_web.sh  start_webui.bat  start_webui.sh  test_probe.py  启动WebUI.bat
@claudez/cli/: install.js  package.json
@claudez/harness-darwin-arm64/: package.json
@claudez/harness-linux-x64/: package.json
@claudez/harness-win32-x64/: package.json
agent/: __init__.py  __main__.py  _trace.py  cli.py  core.py  debug_stream.py  permissions.py  plugin_manager.py  prompt.py  prompt.py.bak  session.py  types.py  webhook.py  workflow.py
agent/cognition/: __init__.py  context_compiler.py  execution_verifier.py  intent_resonator.py  plan_verifier.py  task_context.py  workspace_scanner.py
agent/events/: bus.py  protocol.py
agent/execution/: __init__.py  feedback_loop.py  path_validator.py  plan_executor.py  tool_orchestrator.py
agent/memory/: __init__.py  semantic.py  short_term.py
agent/pipeline/: checkpoint.py  orchestrator.py  types.py
agent/plugins/: __init__.py
agent/providers/: __init__.py  base.py
agent/sandbox/: danger_score.py  temp_dir.py
agent/self_evol/: compressor.py  (+3 more)
core/: tool_schema.py
harness/: go.mod  main.go  runner.py
profit-app/: gen_xml2.py  settings.gradle
scripts/: build.bat  build.sh  start-web.bat
snake_game/: settings.gradle.kts
tests/: run_all.py  test_artifact.py  test_webhook.py  test_workflow.py
(+49 files in other folders)
